--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ img {
 /* VARIABLES */
 :root {
   /* COLOR SELECTOR */
-  --hue: 225; /* default 159 */
+  --hue: 159; /* default 159 */
   --base-color: hsl(var(--hue) 36% 57%);
   --base-color-second: hsl(var(--hue) 65% 88%);
   --base-color-alt: hsl(var(--hue) 57% 53%);
@@ -52,6 +52,7 @@ body {
   color: var(--text-color);
   background: var(--body-color);
   -webkit-font-smoothing: antialiased;
+  max-width: 100vw;
 }
 
 .title {
@@ -270,6 +271,11 @@ nav.show div.icon-close {
   margin: 0;
 }
 
+#home .image,
+#home .text {
+  padding: 0 2rem;
+}
+
 #home .image {
   position: relative;
 }
@@ -435,6 +441,14 @@ nav.show div.icon-close {
   padding: 4rem 1rem;
 }
 
+.swiper-container {
+  position: relative;
+}
+
+.swiper-pagination {
+  position: absolute;
+}
+
 .swiper-pagination-bullet-active {
   background: var(--base-color);
 }
@@ -537,7 +551,8 @@ footer .social a:hover {
 
 /* RESPONSIVE */
 /* extra large devices: 1200 > */
-@media (min-width: 1200px) {
+/* large devices: 1023 > */
+@media (min-width: 1023px) {
   .container {
     max-width: 1120px;
     margin-left: auto;
@@ -659,7 +674,6 @@ footer .social a:hover {
   }
 }
 
-/* large devices: 1023 > */
 /* large devices: 992 > */
 @media (min-width: 992px) {
   :root {
